--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -15,6 +15,7 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+      - run: cd frontend/
       - run: flutter config --enable-web
       - run: flutter pub get
       - run: flutter build web --release
