--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,8 +1,6 @@
 name: Build Flutter Web 
-on:
-  push:
-    branches:
-      - "*"
+on: [push]
+
 jobs:
   build:
     name: Build Web
@@ -15,10 +13,12 @@ jobs:
         uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-      - run: cd frontend/
-      - run: flutter config --enable-web
-      - run: flutter pub get
-      - run: flutter build web --release
+      - working-directory: frontend/
+        run: flutter config --enable-web
+      - working-directory: frontend/
+        run: flutter pub get
+      - working-directory: frontend/
+        run: flutter build web --release
       - 
         name: Setup Docker buildx
         uses: docker/setup-buildx-action@v1
@@ -33,4 +33,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: user/app:latest
+          tags: cmmttd/test–actions-app:latest
