--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -19,7 +19,7 @@ jobs:
         run: flutter pub get
       - working-directory: frontend/
         run: flutter build web --release
-      - 
+      -
         name: Setup Docker buildx
         uses: docker/setup-buildx-action@v1
       -
@@ -34,3 +34,4 @@ jobs:
         with:
           push: true
           tags: cmmttd/test:latest
+          no-cache: true
