--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,37 +1,62 @@
-name: Build Flutter Web 
-on: [push]
+name: Build Flutter Web
+on: [ push ]
+
+env:
+  PROJECT_ID: ${{vars.GCP_PROJECT}}
+  GAR_LOCATION: ${{vars.GCP_REGION}}-docker.pkg.dev/${{vars.GCP_PROJECT}}/${{vars.GCP_CONTAINER_ARTIFACTORY}}/${{vars.GCP_ARTIFACT}}:latest
 
 jobs:
   build:
     name: Build Web
-    env:
-      my_secret: ${{secrets.commit_secret}}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - 
-        uses: subosito/flutter-action@v1
+      - uses: actions/checkout@v4
+      - name: Download Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-      - working-directory: frontend/
-        run: flutter config --enable-web
-      - working-directory: frontend/
-        run: flutter pub get
-      - working-directory: frontend/
-        run: flutter build web --release
-      -
-        name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Build Flutter Web
+        working-directory: frontend/
+        run: |
+          flutter config --enable-web
+          flutter pub get
+          flutter build web --release
+      - name: Setup Docker buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        working-directory: frontend/
+        run: docker build -t ${{ env.GAR_LOCATION }} .
+      #      - name: Login to Docker Hub
+      #        uses: docker/login-action@v3
+      #        with:
+      #          username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: GCP auth
+        uses: google-github-actions/auth@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v6
+          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      #      - name: GCP set up SDK
+      #        uses: google-github-actions/setup-gcloud@v2
+      - name: GCP docker auth
+        run: gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
+      - name: GCP info
+        run: gcloud info
+      - name: Push Docker image
+        working-directory: frontend/
+        run: docker push ${{env.GAR_LOCATION}}
+  deploy:
+    needs: build
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: GCP auth
+        uses: google-github-actions/auth@v2
         with:
-          push: true
-          tags: cmmttd/test:latest
-          no-cache: true
+          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      - name: GCP docker auth
+        run: gcloud auth configure-docker ${{vars.GCP_REGION}}-docker.pkg.dev --quiet
+      - name: Deploy latest on Cloud Run
+        run: |
+          docker pull ${{env.GAR_LOCATION}}
+          IMAGE_DIGESTS=$(docker inspect ${{env.GAR_LOCATION}} --format='{{.RepoDigests}}' | sed 's:^.\(.*\).$:\1:' | tr " " "\n" | head -n 1)
+          gcloud run deploy check-app --image=$IMAGE_DIGESTS --region=europe-west4 --project=${{env.PROJECT_ID}}
