--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,7 +1,8 @@
 name: Build Flutter Web
 on:
-  pull_request:
-    types: [ labeled ]
+  push:
+    branches: [ main, 'feature/**' ]
+    paths: [ 'frontend/**' ]
 
 env:
   PROJECT_ID: ${{vars.GCP_PROJECT}}
@@ -9,7 +10,6 @@ env:
 
 jobs:
   build:
-    if: ${{ github.event.label.name == 'web' }}
     name: Build Web
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,6 @@ jobs:
         working-directory: frontend/
         run: docker push ${{env.GAR_LOCATION}}
   deploy:
-    if: ${{ github.event.label.name == 'web' }}
     needs: build
     name: Deploy
     runs-on: ubuntu-latest
