#19 Mock server port change

--- a/server-mock/src/main/resources/application.yml
+++ b/server-mock/src/main/resources/application.yml
@@ -5,4 +5,4 @@ server:
   port: 8081
 
 cors:
-  allowed-origins: ${CORS_ALLOWED_URL:"http://localhost:*"}
+  allowed-origins: ${CORS_ALLOWED_URL:*}
