--- a/.github/workflows/build_mock_server.yml
+++ b/.github/workflows/build_mock_server.yml
@@ -5,7 +5,7 @@ on:
     paths: [ 'server-mock/**' ]
 
 env:
-  GAR_LOCATION: ${{vars.GCP_REGION}}-docker.pkg.dev/${{vars.GCP_PROJECT}}/${{vars.GCP_CONTAINER_ARTIFACTORY}}/${{vars.MOCK_SERVER_ARTIFACT_NAME}}:latest
+  GAR_LOCATION: ${{vars.MOCK_SERVER_ARTIFACT_NAME}}:latest
 
 jobs:
   build:
@@ -18,27 +18,23 @@ jobs:
       - name: Build Docker image
         working-directory: server-mock/
         run: docker build -t ${{ env.GAR_LOCATION }} .
-      - name: GCP auth
-        uses: google-github-actions/auth@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-      - name: GCP docker auth
-        run: gcloud auth configure-docker ${{ vars.GCP_REGION }}-docker.pkg.dev --quiet
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push Docker image
         run: docker push ${{ env.GAR_LOCATION }}
   deploy:
     needs: build
-    name: Deploy Mock Server Cloud Run
+    name: Deploy Mock Server
     runs-on: ubuntu-latest
     steps:
       - name: GCP auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-      - name: GCP docker auth
-        run: gcloud auth configure-docker ${{ vars.GCP_REGION }}-docker.pkg.dev --quiet
-      - name: Deploy latest on Cloud Run
+      - name: Deploy latest
         run: |
           docker pull ${{ env.GAR_LOCATION }}
-          IMAGE_DIGESTS=$(docker inspect ${{env.GAR_LOCATION}} --format='{{.RepoDigests}}' | sed 's:^.\(.*\).$:\1:' | tr " " "\n" | head -n 1)
-          gcloud run deploy server-mock --image=$IMAGE_DIGESTS --region=${{vars.GCP_REGION}} --project=${{vars.GCP_PROJECT}}
+          gcloud compute instances update-container server-mock --container-image ${{env.GAR_LOCATION}} --zone us-east1-c
