--- a/server-mock/src/main/resources/application.yml
+++ b/server-mock/src/main/resources/application.yml
@@ -2,7 +2,12 @@ spring:
   application:
     name: server-mock
 server:
-  port: 8081
+  port: 443
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: ${SELF_SIGNED_CERT_PASSWORD}
+    key-store-type: PKCS12
+    key-alias: tomcat
 
 cors:
   allowed-origins: ${CORS_ALLOWED_URL:*}
