--- a/.github/workflows/build_mock_server.yml
+++ b/.github/workflows/build_mock_server.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Build Docker image
         working-directory: server-mock/
-        run: docker build --build-arg SELF_SIGNED_CERT_PASSWORD=${{secrets.SELF_SIGNED_CERT_PASSWORD}} -t ${{ env.GAR_LOCATION }} .
+        run: docker build -t ${{ env.GAR_LOCATION }} .
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -34,8 +34,20 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Deploy latest
         run: |
+          TIMESTAMP=$(date +'%Y%m%d%H%M%S')
           docker pull ${{ env.GAR_LOCATION }}
-          gcloud compute instances update-container server-mock --container-image ${{env.GAR_LOCATION}} \
-            --zone us-east1-c --container-env CORS_ALLOWED_URL=https://test-domain-promise.online/
+          gcloud compute instance-templates create-with-container server-mock-template-v$TIMESTAMP \
+            --machine-type e2-micro \
+            --tags http-server,https-server \
+            --container-image ${{env.GAR_LOCATION}} \
+            --container-env CORS_ALLOWED_URL=${{vars.TEST_DOMAIN_URL}}
+          gcloud compute instance-groups managed rolling-action start-update server-mock-group \
+            --version template=server-mock-template-v$TIMESTAMP \
+            --zone us-east1-c \
+            --max-surge 1 \
+            --max-unavailable 1
