--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           flutter config --enable-web
           flutter pub get
-          flutter build web --release --dart-define=SERVER_URL=https://34.74.105.64/mock
+          flutter build web --release --dart-define=SERVER_URL=${{vars.GCP_SERVER_ADDRESS}}/mock
       - name: GCP auth
         uses: google-github-actions/auth@v2
         with:
