--- a/server-mock/pom.xml
+++ b/server-mock/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.belogrudov</groupId>
     <artifactId>server-mock</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>server-mock</name>
     <description>server-mock</description>
     <properties>
@@ -24,6 +24,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
