--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   parallax_animation: ^0.0.3
   http: ^1.2.1
   expansion_tile_card: ^3.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
